[package]
name = "toy-blockchain-cli"
version = "0.1.0"
authors = ["Collins Muriuki <murerwacollins@gmail.com>"]
edition = "2018"

[lib]
name = "blockchain"
path = "src/lib.rs"

[[bin]]
name = "toy_bc"
path = "src/main.rs"


[dependencies]
time = "0.1.38"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
sha2 = "0.7.0"
