[package]
name = "cheza"
version = "0.1.0"
authors = ["Collins Muriuki <hello@collinsmuriuki.xyz>"]
edition = "2018"

[lib]
name = "cheza_blockchain"
path = "src/lib.rs"

[[bin]]
name = "cheza_cli"
path = "src/main.rs"


[dependencies]
time = "0.1.38"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
sha2 = "0.7.0"
